# gen-circleci-orb

./: .gitignore  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  PRLOG.md  README.md  ROADMAP.md  SECURITY.md  deny.toml  gen-circleci-orb.toml  gen-orb-mcp.toml  justfile  renovate.json  sonar-project.properties
.cargo/: audit.toml
.circleci/: config.yml  release.yml  update_prlog.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
crates/gen-circleci-orb/: CHANGELOG.md  Cargo.toml  README.md  THIRD-PARTY-LICENSES.md  about.hbs  about.toml  release-hook.sh  release.toml
crates/gen-circleci-orb/src/: lib.rs  main.rs
crates/gen-circleci-orb/src/ci_patcher/: mod.rs
crates/gen-circleci-orb/src/commands/: ensure_orb_registered.rs  generate.rs  init.rs  mod.rs  update.rs
crates/gen-circleci-orb/src/commands/config/: mod.rs
crates/gen-circleci-orb/src/help_parser/: clap.rs  mod.rs  types.rs
crates/gen-circleci-orb/src/orb_config/: mod.rs  types.rs
crates/gen-circleci-orb/src/orb_generator/: mod.rs  render.rs  types.rs
crates/gen-circleci-orb/src/output_writer/: mod.rs
crates/gen-circleci-orb/tests/: cli_tests.rs  integration_test.rs
crates/gen-circleci-orb/tests/cmd/: help.trycmd
docs/: RELEASING.md  advanced-configuration.md  architecture.md  assurance-case.md  configuration-guide.md  design.md  getting-started.md  openssf-badge.md  user-guide.md
migrations/: 0.0.30.json  0.0.50.json  0.0.55.json
orb/: Dockerfile
orb/src/: @orb.yml
orb/src/commands/: add_job_group.yml  build-container.yml  build_container.yml  build_rust_binary.yml  ensure-orb-registered.yml  ensure_orb_registered.yml  generate.yml  init.yml  set-https-remote.yml  set_default.yml  show.yml  suppress.yml  unsuppress.yml  update.yml
orb/src/examples/: example.yml
orb/src/executors/: default.yml
orb/src/jobs/: build-container.yml  build-mcp-server.yml  build-rust-binary.yml  build_container.yml  build_mcp_server.yml  build_rust_binary.yml  ensure-orb-registered.yml  ensure_orb_registered.yml  generate.yml  init.yml  update.yml
orb/src/scripts/: add_job_group.sh  add_workspace_to_path.sh  build-container.sh  build-mcp-server-generate.sh  build_mcp_server_generate.sh  build_mcp_server_prime.sh  build_mcp_server_publish.sh  build_mcp_server_save.sh  build_mcp_server_setup.sh  build_rust_binary.sh  ensure-orb-registered.sh  init.sh  (+9 more)
prior-versions/: 0.0.11.yml  0.0.12.yml  0.0.13.yml  0.0.14.yml  0.0.15.yml  0.0.16.yml  0.0.17.yml  0.0.18.yml  0.0.19.yml  0.0.21.yml  0.0.22.yml  0.0.23.yml  0.0.24.yml  0.0.25.yml  0.0.26.yml  0.0.27.yml  0.0.28.yml  0.0.29.yml  0.0.30.yml  0.0.31.yml  0.0.32.yml  0.0.33.yml  0.0.34.yml  0.0.35.yml  0.0.36.yml  0.0.37.yml  0.0.38.yml  0.0.39.yml  0.0.40.yml  0.0.41.yml  0.0.42.yml  0.0.43.yml  0.0.44.yml  0.0.45.yml  0.0.46.yml  0.0.47.yml  0.0.48.yml  0.0.49.yml  0.0.50.yml  0.0.51.yml  (+14 more)
