[workspace]
members = ["crates/gen-circleci-orb"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Jeremiah Russell <jrussell@jerus.ie>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jerus-org/gen-circleci-orb"
rust-version = "1.85"
keywords = ["circleci", "orb", "codegen"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
# CLI
clap = { version = "4.6.0", features = ["derive"] }

# Error Handling
anyhow = "1.0.102"
thiserror = "2.0.18"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# Testing
trycmd = "1.2.0"
