[workspace]
members = ["crates/gen-circleci-orb"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Jeremiah Russell <jrussell@jerus.ie>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jerus-org/gen-circleci-orb"
rust-version = "1.85"
keywords = ["circleci", "orb", "codegen"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
# CLI
clap = { version = "4.6.1", features = ["derive"] }

# Error Handling
anyhow = "1.0.102"
thiserror = "2.0.18"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# Serialisation
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
indexmap = { version = "2.14.0", features = ["serde"] }

# Parsing
regex = "1.12.4"

# Configuration
toml = "1.1.2"
dialoguer = "0.12.0"
console = "0.16.3"

# Signed commit + GitHub App push for `generate --record`
pcu = "0.6.25"
config = { version = "0.15.24", default-features = false }
git2 = "0.21.0"
tokio = { version = "1.52.3", features = ["full"] }

# Testing
trycmd = "1.2.0"
tempfile = "3.27.0"
